--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
-streamlit
-pandas
-openai
-python-dotenv
-plotly
+# Core dependencies
+pandas>=2.1,<3
+python-dotenv>=1.0,<2
+
+# Document parsing (PDF/DOCX input support)
+pdfplumber>=0.10,<1
+python-docx>=1.1,<2
+
+# Dashboard (optional - only needed for streamlit run app_redteam.py)
+streamlit>=1.30,<2
+plotly>=5.18,<7
+
+# Testing (optional - only needed for pytest)
+pytest>=8.0,<10
+pytest-cov>=5.0,<8
+fpdf2>=2.7,<3
