feat: sell-side MNPI bypass, 12 expert-grade golden scenarios, UX overhaul
Engine:
- Add sell-side source detection (40+ firms, 15 language patterns);
  suppress MNPI rules for published sell-side research (compliance
  burden is on issuing firm, not buy-side reader)
- Version from importlib.metadata (single source of truth)

Golden scenarios (7 → 12):
- Rewrite all 7 with domain-expert precision: fix naked-calls
  terminology, 13F vs short-interest error, add legal citations
  (Dirks v. SEC, MiFID II Art 24, FCA PS17/14), academic refs
  (Michaud 1989, Brunnermeier-Pedersen 2009, Khandani-Lo 2007)
- Add 5 new: Reg FD selective disclosure, overconfidence/certainty,
  position concentration, short-and-distort, redemption/liquidity
  mismatch

Dashboard:
- Welcome block, example buttons (Clean/Risky/Reg), glossary (30+
  terms), About expanded by default, error guards, CSS for 100% zoom,
  split vuln chart and failure table into separate rows

CLI:
- Summary line on every run, --stdout/-s, --version, -p/-n aliases,
  ValueError catch, exit codes in --help epilog

Build:
- Remove dead python-dotenv dep, add [dev] extra, fix license format,
  explicit py-modules, expand CI lint targets

Tests: 157 → 165 (8 sell-side bypass tests)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest pytest-cov
           # Install main deps (but skip streamlit for faster CI)
-          pip install pandas python-dotenv pdfplumber python-docx fpdf2
+          pip install pandas pdfplumber python-docx fpdf2
 
       - name: Run tests with coverage
         run: |
@@ -59,10 +59,10 @@ jobs:
         run: pip install ruff
 
       - name: Ruff check
-        run: ruff check redflag_engine.py run_redflag.py document_loader.py boilerplate_filter.py tests/
+        run: ruff check redflag_engine.py run_redflag.py document_loader.py boilerplate_filter.py bayesian_risk_priors.py app_redteam.py tests/
 
       - name: Ruff format check
-        run: ruff format --check redflag_engine.py run_redflag.py document_loader.py boilerplate_filter.py tests/
+        run: ruff format --check redflag_engine.py run_redflag.py document_loader.py boilerplate_filter.py bayesian_risk_priors.py app_redteam.py tests/
 
   integration:
     runs-on: ubuntu-latest
@@ -78,7 +78,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas python-dotenv pdfplumber python-docx
+          pip install pandas pdfplumber python-docx
 
       - name: Test all example files
         run: |
