--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,13 @@
 [project]
 name = "redflag-analyst"
-version = "0.2.0"
+version = "0.2.1"
 description = "Deterministic red-teaming and compliance-gating engine for institutional finance"
 readme = "README.md"
 requires-python = ">=3.9"
-license = {text = "MIT"}
+license = "MIT"
 
 dependencies = [
     "pandas>=2.1,<3",
-    "python-dotenv>=1.0,<2",
     "pdfplumber>=0.10,<1",
     "python-docx>=1.1,<2",
 ]
@@ -23,13 +22,27 @@ test = [
     "pytest-cov>=5.0,<8",
     "fpdf2>=2.7,<3",
 ]
+dev = [
+    "redflag-analyst[test,dashboard]",
+    "ruff>=0.3,<1",
+]
 
 [project.scripts]
 redflag = "run_redflag:main"
 
+[tool.setuptools]
+py-modules = [
+    "redflag_engine",
+    "document_loader",
+    "boilerplate_filter",
+    "bayesian_risk_priors",
+    "run_redflag",
+    "app_redteam",
+]
+
 [build-system]
 requires = ["setuptools>=68"]
-build-backend = "setuptools.backends._legacy:_Backend"
+build-backend = "setuptools.build_meta"
 
 [tool.ruff]
 target-version = "py39"
